[gd_scene load_steps=12 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://Images/Backdrop.jpg" type="Texture" id=2]
[ext_resource path="res://Images/Fatal Frame.png" type="Texture" id=3]
[ext_resource path="res://Images/Ace_Attorney.jpg" type="Texture" id=4]
[ext_resource path="res://Images/Persona_5_Menu.jpeg" type="Texture" id=5]
[ext_resource path="res://Images/Bulky_Ann.png" type="Texture" id=6]
[ext_resource path="res://Images/Lan.png" type="Texture" id=7]
[ext_resource path="res://Images/Polite.jpeg" type="Texture" id=8]
[ext_resource path="res://Images/Slug.png" type="Texture" id=9]
[ext_resource path="res://Cruel_Theme.tres" type="Theme" id=10]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=11]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 510, 300 )
scale = Vector2( 0.535, 0.56 )
texture = ExtResource( 2 )

[node name="Fatal Frame" type="Sprite" parent="."]
position = Vector2( 510, 35 )
texture = ExtResource( 3 )

[node name="Ace" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 275 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Persona_Menu" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 275 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Bulky_Ann" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 275 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Lan" type="Sprite" parent="."]
visible = false
position = Vector2( 490.757, 285.08 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Polite" type="Sprite" parent="."]
visible = false
position = Vector2( 505.391, 284.056 )
texture = ExtResource( 8 )

[node name="Slug" type="Sprite" parent="."]
visible = false
position = Vector2( 490.73, 274.893 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 358.0
margin_top = 492.0
margin_right = 668.0
margin_bottom = 592.0
rect_min_size = Vector2( 310, 100 )
theme = ExtResource( 10 )
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 358.0
margin_top = 492.0
margin_right = 668.0
margin_bottom = 592.0
rect_min_size = Vector2( 310, 100 )
theme = ExtResource( 11 )
text = "Reveal Answer"

[node name="Button" type="Button" parent="."]
margin_left = 47.0
margin_top = 492.0
margin_right = 357.0
margin_bottom = 592.0
rect_min_size = Vector2( 310, 100 )
theme = ExtResource( 11 )
text = "Correct"

[node name="Button2" type="Button" parent="."]
margin_left = 669.0
margin_top = 492.0
margin_right = 979.0
margin_bottom = 592.0
rect_min_size = Vector2( 310, 100 )
theme = ExtResource( 11 )
text = "Incorrect"
[connection signal="ready" from="." to="." method="_on_Node_ready"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
